# physical_ai

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml  lighthouse.yml
.specify/memory/: constitution.md
backend/: .env.example  alembic.ini  pyproject.toml  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_conversations.py  003_users_progress.py
backend/scripts/: __init__.py  index_capstone.py  index_content.py  init_qdrant.py  seed_data.py  verify_index.py
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  auth.py  chatbot.py  progress.py  users.py
backend/src/lib/: cache.py  config.py  database.py  errors.py  qdrant.py  rate_limiter.py
backend/src/models/: __init__.py  base.py  chapter.py  conversation.py  message.py  module.py  progress.py  user.py
backend/src/services/: __init__.py  auth_service.py  chatbot_service.py  chatbot_service_backup.py  embedding_service.py  progress_service.py  recommendation_service.py
frontend/: .env.example  .eslintignore  .eslintrc.js  .prettierignore  docusaurus.config.ts  lighthouserc.json  package-lock.json  package.json  sidebars.ts  tsconfig.json
frontend/docs/capstone/: index.md  milestone-1.md  milestone-2.md  milestone-3.md  milestone-4.md  milestone-5.md
frontend/docs/intro/: index.md  prerequisites.md  setup.md
frontend/docs/module-1-ros2/: index.md  nodes-and-topics.md  services-and-actions.md  urdf-basics.md
frontend/i18n/ur/: glossary.json
specs/001-physical-ai-textbook/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+97 files in other folders)
